# beyond-coara-browser

./: NOTICE.md  README.md  secretactivity.java  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  obfuscation-dictionary.txt  proguard-rules.pro  test.jks
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: LICENSE.MD  exec.html  index.html  secret.html
app/src/main/cpp/: CMakeLists.txt  highlight_native.cpp
app/src/main/res/drawable/: bg_url_edittext2.xml  ic_add.xml  ic_arrow_back.xml  ic_arrow_forward.xml  ic_asciiart.xml  ic_bookmark_add.xml  ic_bookmarks.xml  ic_close.xml  ic_copy.xml  ic_dark_mode.xml  ic_download.xml  ic_edit.xml  ic_file.xml  ic_globe.xml  ic_history.xml  ic_more_vert.xml  ic_num.xml  ic_pagedl.xml  ic_qrcode.xml  ic_tabs.xml  ic_txtphoto.xml  icon.xml  icon_background.xml  icon_monochrome.xml  item_background.xml  rounded_bg.xml  rounded_outline.xml  transparent_vector.xml
app/src/main/res/layout/: Secret_main.xml  activity_download_history.xml  activity_grep.xml  activity_main.xml  activity_pgdl.xml  activity_settings.xml  asciiart.xml  dialog_edit_bookmark.xml  dialog_markdown.xml  find_in_page_bar.xml  htmlview.xml  item_bookmark.xml  item_download.xml  item_history.xml  item_setting.xml  item_tab.xml  item_tab_add.xml  num.xml  search_bar_layout.xml  secret_main.xml  txtphoto_main.xml
app/src/main/res/layout-sw720dp/: activity_main.xml  secret_main.xml
(+41 files in other folders)
